// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a copybutton 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full TextInput--with-copy-button"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
    <div
      class="CopyButton TextInput__copy-button"
      data-test-id="cf-ui-copy-button"
      id="copyButton"
    >
      <span
        class="TooltipContainer"
      >
        <button
          class="CopyButton__button"
          type="button"
        >
          <span
            class="emotion-2 CopyButton__TabFocusTrap"
            tabindex="-1"
          >
            <span
              class="CopyButton__text"
            >
              Copy 
               to clipboard
            </span>
            <svg
              class="emotion-1"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders the component with a placeholder text 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      placeholder="placeholder"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a rows defined 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      rows="2"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a textlink 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
    <button
      class="TextLink TextField__label-link TextLink--primary"
      data-test-id="cf-ui-text-link"
      type="button"
    >
      <span
        class="emotion-2"
        tabindex="-1"
      >
        <div
          class="TextLink__icon-wrapper"
        >
          <svg
            class="TextLink__icon emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
            />
          </svg>
        </div>
        Unlock to edit
      </span>
    </button>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value="1234"
    />
  </div>
</div>
`;

exports[`renders the component with additional prop 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="test"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full my-extra-class"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with as textarea 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="Textarea Textarea--full"
  >
    <textarea
      aria-label="someComponent"
      class="Textarea__textarea"
      data-test-id="cf-ui-textarea"
      id="someComponent"
      name="someComponent"
    />
  </div>
</div>
`;

exports[`renders the component with characters count 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      maxlength="20"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="TextField__hints"
  >
    <p
      class="TextField__help-text TextField__count emotion-1"
      data-test-id="cf-ui-help-text"
    >
      0
      /
      20
    </p>
  </div>
</div>
`;

exports[`renders the component with help text 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="TextField__hints"
  >
    <p
      class="TextField__help-text emotion-1"
      data-test-id="cf-ui-help-text"
    >
      You need to fill out this field
    </p>
  </div>
</div>
`;

exports[`renders the component with max length of characters 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      maxlength="10"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with required text 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with small width 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
</div>
`;

exports[`renders the component with validation message 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
  margin-right: 0.25rem;
  margin-top: calc(0.25rem / 2);
  min-height: 18px;
  min-width: 18px;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #BF3045;
  margin: 0;
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full TextInput--negative"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value=""
    />
  </div>
  <div
    class="TextField__validation-message emotion-3"
    data-test-id="cf-ui-validation-message"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p
      class="emotion-2"
      data-test-id="cf-ui-paragraph"
    >
      Field is required
    </p>
  </div>
</div>
`;

exports[`updates the value 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<div
  class="TextField TextField--full"
  data-test-id="cf-ui-text-field"
>
  <div
    class="TextField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="someComponent"
    >
      test
    </label>
  </div>
  <div
    class="TextInput TextInput--full"
  >
    <input
      class="TextInput__input"
      data-test-id="cf-ui-text-input"
      id="someComponent"
      name="someComponent"
      value="new value"
    />
  </div>
</div>
`;
